# ryuuji

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/anime/: mod.rs
src/user_data/: mod.rs
