[package]
name = "ryuuji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
directories = "4.0.1"